# braid

./: .gitignore  README.md  backend.py  requirements-backend.txt
OMNIMOL/: README.md  pyproject.toml
OMNIMOL/benchmark/: make_common.py
OMNIMOL/braid_tok/: tokenizer.json
OMNIMOL/runs/braidberta/checkpoint-13000/: config.json
benchmark/: compare_validity.py
braid_tok/: tokenizer_config.json
braids/: codec.py  tokenizer.py
braids/benchmark/: train_clm.py
braids/braid_tok/: vocab.json
braids/braids/: __init__.py  __main__.py
braids/tests/: test_roundtrip.py
tests/: test_roundtrip.py  test_stereo.py  test_validity.py
